Add first version of common scenarios
Change context for shaker, added common
functions for l3 and dhcp in base_scrnario.
Create Neutron disaster scenario with common
scenarios for l3 and agents

Change-Id: Iba459ff3a78a9e13d8c73abba75bc5ee372fb428

--- a/tox.ini
+++ b/tox.ini
@@ -23,13 +23,12 @@ commands =
         bash tools/verify.sh
         bash tools/install_rally.sh
         bash tools/install_shaker_agents.sh
-        rally --plugin-path {toxinidir}/rally-contexts,{toxinidir}/rally-scenarios task start {posargs}
+        rally --plugin-path {toxinidir}/haos/rally/context,{toxinidir}/haos/rally/plugin task start {posargs}
 whitelist_externals = bash
 
 [flake8]
 # E125 continuation line does not distinguish itself from next logical line
-# all others are enabled temporary
-ignore = E125,F401,H233,F841,H304,H306,H401,E226,H302
+ignore = E125
 show-source = true
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,tools,build
