Simplify test execution and update readme
Change-Id: Ib9027ca7432e7cee3bbc873519a3731148b63048

--- a/tox.ini
+++ b/tox.ini
@@ -18,12 +18,11 @@ commands = python setup.py testr --testr-args='{posargs}'
 commands = flake8
 
 [testenv:run]
-;commands = {posargs}
 commands =
         bash tools/verify.sh
         bash tools/install_rally.sh
         bash tools/install_shaker_agents.sh
-        rally --plugin-path {toxinidir}/haos/rally/context,{toxinidir}/haos/rally/plugin task start {posargs}
+        bash tools/run_rally.sh {posargs}
 whitelist_externals = bash
 
 [flake8]
