Introduce Cirros-based Haos agent and add sample test
This patch adds new agent that can be used in Cirros images and
does the same functionality as Shaker Lib (allowing execution
of remote commands)

As an example of Haos agent a simple Neutron DHCP disaster test
is added.

Change-Id: I4be3fe2c05831f268f4fbde3ac69f74bf45268bc

--- a/tox.ini
+++ b/tox.ini
@@ -19,9 +19,7 @@ commands = flake8
 
 [testenv:run]
 commands =
-        bash tools/verify.sh
-        bash tools/install_rally.sh
-        bash tools/install_shaker_agents.sh
+        bash tools/make_env.sh
         bash tools/run_rally.sh {posargs}
 whitelist_externals = bash
 
