Added new atomic scenarios
We need to add more small atomic destructive scenarios
to run them in parallel with load and performance tests.
each small destructive scenario should only perform some
destructive action and then recover the cloud, without
any additional checks in the destructive scenario.

Change-Id: I8f87a1d935786d05cdba76608d2efd28b3cc927f

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,12 @@ commands =
         bash tools/run_rally.sh {posargs}
 whitelist_externals = bash
 
+[testenv:run-for-mos]
+commands =
+        bash tools/make_env.sh
+        bash tools/run_rally.sh {posargs}
+whitelist_externals = bash
+
 [flake8]
 # E125 continuation line does not distinguish itself from next logical line
 ignore = E125
