Modified way to run HAOS tests
Change-Id: Id13d9793fc77a893690f20686c4e4d6d71e4e6b6

--- a/tox.ini
+++ b/tox.ini
@@ -19,13 +19,13 @@ commands = flake8
 
 [testenv:run]
 commands =
-        bash tools/make_env.sh
+        bash tools/install_rally.sh
         bash tools/run_rally.sh {posargs}
 whitelist_externals = bash
 
 [testenv:run-for-mos]
 commands =
-        bash tools/make_env.sh
+        bash tools/make_mos_env.sh
         bash tools/run_rally.sh {posargs}
 whitelist_externals = bash
 
